--- a/app/src/main/res/layout/fragment_view_community.xml
+++ b/app/src/main/res/layout/fragment_view_community.xml
@@ -27,14 +27,14 @@
                 <ImageView
                     android:id="@+id/community_photo"
                     android:layout_width="match_parent"
-                    android:layout_height="150dp"
+                    android:layout_height="@dimen/hero_img_height"
                     android:contentDescription="Community Main Photo"
                     android:scaleType="centerCrop"
                     tools:src="@tools:sample/backgrounds/scenic" />
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="75dp"
+                    android:layout_height="@dimen/fade_scrim_height"
                     android:background="@drawable/fade_gradient_bottom"
                     app:layout_constraintBottom_toBottomOf="@id/community_photo" />
 
@@ -42,8 +42,9 @@
                     android:id="@+id/community_name_tv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    android:textSize="16sp"
+                    android:layout_margin="@dimen/edittext_margin"
+                    android:textSize="@dimen/title_txt"
+                    android:textStyle="bold"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/community_photo"
@@ -54,8 +55,8 @@
                     android:id="@+id/community_desc_tv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:textSize="16sp"
+                    android:layout_marginTop="@dimen/edittext_margin"
+                    android:textSize="@dimen/default_tv_text_size"
                     app:layout_constraintEnd_toEndOf="@id/community_name_tv"
                     app:layout_constraintStart_toStartOf="@id/community_name_tv"
                     app:layout_constraintTop_toBottomOf="@id/community_name_tv"
@@ -65,8 +66,8 @@
                     android:id="@+id/community_street_address_et"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:textSize="16sp"
+                    android:layout_marginTop="@dimen/edittext_margin"
+                    android:textSize="@dimen/default_tv_text_size"
                     app:layout_constraintEnd_toEndOf="@id/community_desc_tv"
                     app:layout_constraintStart_toStartOf="@id/community_desc_tv"
                     app:layout_constraintTop_toBottomOf="@id/community_desc_tv"
@@ -76,8 +77,8 @@
                     android:id="@+id/community_city_et"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:textSize="16sp"
+                    android:layout_marginTop="@dimen/edittext_margin"
+                    android:textSize="@dimen/default_tv_text_size"
                     app:layout_constraintEnd_toEndOf="@id/community_desc_tv"
                     app:layout_constraintStart_toStartOf="@id/community_desc_tv"
                     app:layout_constraintTop_toBottomOf="@id/community_street_address_et"
@@ -87,8 +88,8 @@
                     android:id="@+id/community_state_et"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:textSize="16sp"
+                    android:layout_marginTop="@dimen/edittext_margin"
+                    android:textSize="@dimen/default_tv_text_size"
                     app:layout_constraintEnd_toEndOf="@id/community_desc_tv"
                     app:layout_constraintStart_toStartOf="@id/community_desc_tv"
                     app:layout_constraintTop_toBottomOf="@id/community_city_et"
@@ -98,8 +99,8 @@
                     android:id="@+id/community_zip_et"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:textSize="16sp"
+                    android:layout_marginTop="@dimen/edittext_margin"
+                    android:textSize="@dimen/default_tv_text_size"
                     app:layout_constraintEnd_toEndOf="@id/community_desc_tv"
                     app:layout_constraintStart_toStartOf="@id/community_desc_tv"
                     app:layout_constraintTop_toBottomOf="@id/community_state_et"
@@ -110,8 +111,8 @@
                     android:id="@+id/community_country_et"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:textSize="16sp"
+                    android:layout_marginTop="@dimen/edittext_margin"
+                    android:textSize="@dimen/default_tv_text_size"
                     app:layout_constraintEnd_toEndOf="@id/community_desc_tv"
                     app:layout_constraintStart_toStartOf="@id/community_desc_tv"
                     app:layout_constraintTop_toBottomOf="@id/community_zip_et"
@@ -121,9 +122,9 @@
                     android:id="@+id/community_phone_et"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="16dp"
-                    android:textSize="16sp"
+                    android:layout_marginTop="@dimen/edittext_margin"
+                    android:layout_marginBottom="@dimen/edittext_margin"
+                    android:textSize="@dimen/default_tv_text_size"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@id/community_desc_tv"
                     app:layout_constraintStart_toStartOf="@id/community_desc_tv"
