--- a/app/src/main/res/layout/fragment_view_maintenance_req_info.xml
+++ b/app/src/main/res/layout/fragment_view_maintenance_req_info.xml
@@ -21,19 +21,20 @@
                 android:id="@+id/request_title_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:textSize="24sp"
+                android:layout_margin="@dimen/edittext_margin"
+                android:textSize="@dimen/title_txt"
+                android:textStyle="bold"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="Title" />
+                tools:text="@tools:sample/lorem" />
 
             <TextView
                 android:id="@+id/request_unit_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:textSize="16sp"
+                android:layout_marginTop="@dimen/edittext_margin"
+                android:textSize="@dimen/default_tv_text_size"
                 app:layout_constraintLeft_toLeftOf="@id/request_title_tv"
                 app:layout_constraintRight_toRightOf="@id/request_title_tv"
                 app:layout_constraintTop_toBottomOf="@id/request_title_tv"
@@ -44,8 +45,8 @@
                 android:id="@+id/request_resident_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:textSize="16sp"
+                android:layout_marginTop="@dimen/edittext_margin"
+                android:textSize="@dimen/default_tv_text_size"
                 app:layout_constraintLeft_toLeftOf="@id/request_unit_tv"
                 app:layout_constraintRight_toRightOf="@id/request_unit_tv"
                 app:layout_constraintTop_toBottomOf="@id/request_unit_tv"
@@ -55,8 +56,8 @@
                 android:id="@+id/request_status_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:textSize="16sp"
+                android:layout_marginTop="@dimen/edittext_margin"
+                android:textSize="@dimen/default_tv_text_size"
                 app:layout_constraintLeft_toLeftOf="@id/request_resident_tv"
                 app:layout_constraintRight_toRightOf="@id/request_resident_tv"
                 app:layout_constraintTop_toBottomOf="@id/request_resident_tv"
@@ -66,8 +67,8 @@
                 android:id="@+id/request_desc_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:textSize="16sp"
+                android:layout_marginTop="@dimen/edittext_margin"
+                android:textSize="@dimen/default_tv_text_size"
                 app:layout_constraintLeft_toLeftOf="@id/request_status_tv"
                 app:layout_constraintRight_toRightOf="@id/request_status_tv"
                 app:layout_constraintTop_toBottomOf="@id/request_status_tv"
@@ -77,8 +78,8 @@
                 android:id="@+id/request_comments_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:textSize="16sp"
+                android:layout_marginTop="@dimen/edittext_margin"
+                android:textSize="@dimen/default_tv_text_size"
                 app:layout_constraintLeft_toLeftOf="@id/request_desc_tv"
                 app:layout_constraintRight_toRightOf="@id/request_desc_tv"
                 app:layout_constraintTop_toBottomOf="@id/request_desc_tv"
