--- a/app/src/main/res/layout/list_item_resident.xml
+++ b/app/src/main/res/layout/list_item_resident.xml
@@ -16,9 +16,9 @@
 
         <ImageView
             android:id="@+id/resident_item_img"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:layout_margin="8dp"
+            android:layout_width="@dimen/item_thumbnail"
+            android:layout_height="@dimen/item_thumbnail"
+            android:layout_margin="@dimen/edittext_gap"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,10 +29,10 @@
             android:id="@+id/resident_item_fname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            android:textSize="24sp"
+            android:layout_marginStart="@dimen/edittext_gap"
+            android:layout_marginLeft="@dimen/edittext_gap"
+            android:layout_marginTop="@dimen/edittext_gap"
+            android:textSize="@dimen/viewholder_primary_item"
             app:layout_constraintLeft_toRightOf="@id/resident_item_img"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="@tools:sample/first_names" />
@@ -41,10 +41,10 @@
             android:id="@+id/resident_item_lname"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            android:textSize="24sp"
+            android:layout_marginStart="@dimen/edittext_gap"
+            android:layout_marginLeft="@dimen/edittext_gap"
+            android:layout_marginTop="@dimen/edittext_gap"
+            android:textSize="@dimen/viewholder_primary_item"
             app:layout_constraintLeft_toRightOf="@id/resident_item_fname"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -54,7 +54,7 @@
             android:id="@+id/resident_item_apt_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:textSize="@dimen/default_tv_text_size"
             app:layout_constraintLeft_toLeftOf="@id/resident_item_fname"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/resident_item_fname"
