--- a/app/src/main/res/layout/fragment_view_announcement_info.xml
+++ b/app/src/main/res/layout/fragment_view_announcement_info.xml
@@ -22,8 +22,9 @@
                 android:id="@+id/ad_post_title_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:textSize="24sp"
+                android:layout_margin="@dimen/edittext_margin"
+                android:textSize="@dimen/title_txt"
+                android:textStyle="bold"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -34,8 +35,8 @@
                 android:id="@+id/ad_post_resident_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:textSize="16sp"
+                android:layout_marginTop="@dimen/edittext_margin"
+                android:textSize="@dimen/default_tv_text_size"
                 app:layout_constraintLeft_toLeftOf="@id/ad_post_title_tv"
                 app:layout_constraintRight_toRightOf="@id/ad_post_title_tv"
                 app:layout_constraintTop_toBottomOf="@id/ad_post_title_tv"
@@ -45,8 +46,8 @@
                 android:id="@+id/ad_post_date_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:textSize="16sp"
+                android:layout_marginTop="@dimen/edittext_margin"
+                android:textSize="@dimen/default_tv_text_size"
                 app:layout_constraintLeft_toLeftOf="@id/ad_post_title_tv"
                 app:layout_constraintRight_toRightOf="@id/ad_post_title_tv"
                 app:layout_constraintTop_toBottomOf="@id/ad_post_resident_tv"
@@ -57,8 +58,8 @@
                 android:id="@+id/ad_post_desc_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:textSize="16sp"
+                android:layout_marginTop="@dimen/edittext_margin"
+                android:textSize="@dimen/default_tv_text_size"
                 app:layout_constraintLeft_toLeftOf="@id/ad_post_date_tv"
                 app:layout_constraintRight_toRightOf="@id/ad_post_date_tv"
                 app:layout_constraintTop_toBottomOf="@id/ad_post_date_tv"
