--- a/app/src/main/res/layout/fragment_view_resident_info.xml
+++ b/app/src/main/res/layout/fragment_view_resident_info.xml
@@ -6,141 +6,118 @@
         <!-- add variables here -->
     </data>
 
-    <!--
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v4.widget.NestedScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context=".ViewResidentInfo">
+            android:layout_height="match_parent">
 
-    -->
-    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+            <ImageView
+                android:id="@+id/resident_photo"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/hero_img_height"
+                android:scaleType="centerCrop"
+                tools:src="@tools:sample/backgrounds/scenic" />
 
-        <ImageView
-            android:id="@+id/resident_photo"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:scaleType="centerCrop"
-            tools:src="@tools:sample/backgrounds/scenic" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="75dp"
-            android:background="@drawable/fade_gradient_bottom"
-            app:layout_constraintBottom_toBottomOf="@id/resident_photo" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/fade_scrim_height"
+                android:background="@drawable/fade_gradient_bottom"
+                app:layout_constraintBottom_toBottomOf="@id/resident_photo" />
 
 
-        <TextView
-            android:id="@+id/resident_fname_tv"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:textSize="16sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/resident_photo"
-            tools:text="First Name" />
+            <TextView
+                android:id="@+id/resident_fname_tv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/edittext_margin"
+                android:textSize="@dimen/default_tv_text_size"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/resident_photo"
+                tools:text="First Name" />
 
 
-        <TextView
-            android:id="@+id/resident_lname_tv"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/resident_fname_tv"
-            tools:text="Last Name" />
+            <TextView
+                android:id="@+id/resident_lname_tv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/edittext_margin"
+                android:textSize="@dimen/default_tv_text_size"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/resident_fname_tv"
+                tools:text="Last Name" />
 
 
-        <TextView
-            android:id="@+id/resident_gender_tv"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/resident_lname_tv"
-            tools:text="Gender" />
+            <TextView
+                android:id="@+id/resident_gender_tv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/resident_lname_tv"
+                tools:text="Gender" />
 
-        <TextView
-            android:id="@+id/resident_email_tv"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:autoLink="email"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/resident_gender_tv"
-            tools:text="email@email.com" />
+            <TextView
+                android:id="@+id/resident_email_tv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/edittext_margin"
+                android:autoLink="email"
+                android:textSize="@dimen/default_tv_text_size"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/resident_gender_tv"
+                tools:text="email@email.com" />
 
-        <TextView
-            android:id="@+id/resident_phone_tv"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:autoLink="phone"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/resident_email_tv"
-            tools:text="+1 (555)-555-5555" />
+            <TextView
+                android:id="@+id/resident_phone_tv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/edittext_margin"
+                android:autoLink="phone"
+                android:textSize="@dimen/default_tv_text_size"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/resident_email_tv"
+                tools:text="+1 (555)-555-5555" />
 
-        <TextView
-            android:id="@+id/resident_apt_header_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:autoLink="phone"
-            android:textSize="16sp"
-            android:text="Apartment: "
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/resident_phone_tv" />
+            <TextView
+                android:id="@+id/resident_apt_header_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/edittext_margin"
+                android:autoLink="phone"
+                android:text="Apartment: "
+                android:textSize="@dimen/default_tv_text_size"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/resident_phone_tv" />
 
-        <TextView
-            android:id="@+id/resident_apt_tv"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="16dp"
-            android:autoLink="phone"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/resident_apt_header_tv"
-            app:layout_constraintTop_toTopOf="@id/resident_apt_header_tv"
-            tools:text="@tools:sample/lorem" />
+            <TextView
+                android:id="@+id/resident_apt_tv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/edittext_margin"
+                android:layout_marginEnd="@dimen/edittext_margin"
+                android:autoLink="phone"
+                android:textSize="@dimen/default_tv_text_size"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/resident_apt_header_tv"
+                app:layout_constraintTop_toTopOf="@id/resident_apt_header_tv"
+                tools:text="@tools:sample/lorem" />
 
-    </android.support.constraint.ConstraintLayout>
+        </android.support.constraint.ConstraintLayout>
 
-    <!--
-
-        </android.support.v4.widget.NestedScrollView>
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_edit_resident"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|bottom"
-            android:layout_margin="16dp"
-            android:src="@drawable/ic_baseline_edit_24px"
-            app:fabSize="normal" />
+    </android.support.v4.widget.NestedScrollView>
 
 
-    </FrameLayout>
-
-    -->
 </layout>
