--- a/app/src/main/res/layout/list_item_ad.xml
+++ b/app/src/main/res/layout/list_item_ad.xml
@@ -7,11 +7,10 @@
 
     </data>
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/ad_item_container"
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/ad_item_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -20,39 +19,39 @@
             android:id="@+id/ad_item_title_tv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="8dp"
-            android:textSize="24sp"
+            android:layout_marginLeft="@dimen/edittext_margin"
+            android:layout_marginTop="@dimen/edittext_gap"
+            android:layout_marginRight="@dimen/edittext_margin"
+            android:textSize="@dimen/viewholder_primary_item"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="@tools:sample/lorem[3]" />
 
 
-
         <TextView
             android:id="@+id/ad_item_date_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="@dimen/edittext_margin"
+            android:layout_marginRight="@dimen/edittext_margin"
+            android:layout_marginBottom="@dimen/edittext_gap"
+            android:textSize="@dimen/default_tv_text_size"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="@id/ad_item_title_tv"
             app:layout_constraintTop_toBottomOf="@id/ad_item_title_tv"
-            app:layout_constraintBottom_toBottomOf="parent"
             tools:text="@tools:sample/date/mmddyy" />
 
         <TextView
             android:id="@+id/ad_item_by_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="@dimen/edittext_gap"
+            android:layout_marginLeft="@dimen/edittext_gap"
+            android:textSize="@dimen/default_tv_text_size"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="@id/ad_item_title_tv"
             app:layout_constraintTop_toBottomOf="@id/ad_item_title_tv"
-            app:layout_constraintBottom_toBottomOf="parent"
             tools:text="@tools:sample/full_names" />
 
     </android.support.constraint.ConstraintLayout>
