--- a/app/src/main/res/layout/list_item_apartment.xml
+++ b/app/src/main/res/layout/list_item_apartment.xml
@@ -20,8 +20,10 @@
             android:id="@+id/apt_item_primary_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:textSize="24sp"
+            android:layout_marginLeft="@dimen/edittext_margin"
+            android:layout_marginRight="@dimen/edittext_margin"
+            android:layout_marginTop="@dimen/edittext_gap"
+            android:textSize="@dimen/viewholder_primary_item"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -31,7 +33,7 @@
             android:id="@+id/apt_item_secondary_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:textSize="@dimen/default_tv_text_size"
             app:layout_constraintLeft_toLeftOf="@id/apt_item_primary_text"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/apt_item_primary_text"
