--- a/app/src/main/res/layout/list_item_request.xml
+++ b/app/src/main/res/layout/list_item_request.xml
@@ -20,51 +20,38 @@
             android:id="@+id/req_item_type"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="8dp"
-            android:textSize="24sp"
+            android:layout_marginLeft="@dimen/edittext_margin"
+            android:layout_marginRight="@dimen/edittext_margin"
+            android:layout_marginTop="@dimen/edittext_gap"
+            android:textSize="@dimen/viewholder_primary_item"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Request Type" />
 
         <TextView
-            android:id="@+id/req_item_apt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="@id/req_item_type"
-            app:layout_constraintTop_toBottomOf="@id/req_item_type"
-            app:layout_constraintBottom_toBottomOf="parent"
-            tools:text="Apt #1234" />
-
-        <TextView
             android:id="@+id/req_item_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toRightOf="@id/req_item_type"
+            android:textSize="@dimen/default_tv_text_size"
+            app:layout_constraintLeft_toLeftOf="@id/req_item_type"
             app:layout_constraintTop_toBottomOf="@id/req_item_type"
             app:layout_constraintBottom_toBottomOf="parent"
             tools:text="@tools:sample/date/mmddyy" />
 
-        <!--
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginEnd="16dp"
+        <TextView
+            android:id="@+id/req_item_apt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/default_tv_text_size"
+            android:layout_marginBottom="@dimen/edittext_gap"
+            android:layout_marginRight="@dimen/edittext_margin"
+            android:layout_marginEnd="@dimen/edittext_margin"
+            app:layout_constraintRight_toRightOf="@id/req_item_type"
+            app:layout_constraintTop_toBottomOf="@id/req_item_type"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:background="@android:color/black"
-            />
-            -->
+            tools:text="Apt #1234" />
+
 
     </android.support.constraint.ConstraintLayout>
 
