--- a/app/src/main/res/layout/fragment_view_community.xml
+++ b/app/src/main/res/layout/fragment_view_community.xml
@@ -28,7 +28,7 @@
                     android:id="@+id/community_photo"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/hero_img_height"
-                    android:contentDescription="Community Main Photo"
+                    android:contentDescription="@string/content_desc_community_photo"
                     android:scaleType="centerCrop"
                     tools:src="@tools:sample/backgrounds/scenic" />
 
@@ -137,16 +137,6 @@
 
         </android.support.v4.widget.NestedScrollView>
 
-        <!--
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_edit_community"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|bottom"
-            android:layout_margin="16dp"
-            android:src="@drawable/ic_baseline_edit_24px"
-            app:fabSize="normal" />
-         -->
 
     </FrameLayout>
 
